style.css
* {
    background-color: #24273a;
}

body {
    margin: 0;
}

.headerBanner {
    position: relative;
    padding: 0;
    margin: 0;
}

.headerBanner img {
    width: 100%;
    height: auto;
    max-height: 635px;
    transform: translateY(-10%);
    z-index: 1;
    filter: blur(3px);
}

.headerBanner::before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 10%;
    background: linear-gradient(rgba(36, 39, 58, 1), rgba(36, 39, 58, 0));
    z-index: 2;
}

.headerContent h1 {
    font-size: 100px;
    font-family: Arial, Helvetica, sans-serif;
    color: #cad3f5;
    z-index: 3;
    position: absolute;
    top: 20%; 
    left: 50%; 
    background: none;
    text-align: center;
    transform: translate(-50%, -50%); 
}

.dotfilesImage img {
    max-width: 750px;
    max-height: 750px;
    transform: translate(0%, -10%);
    margin-left: 32px;
    border-radius: 20px;
    border: solid 5px #c6a0f6;
}

.dotfilesText h1 {
    font-family: Arial, Helvetica, sans-serif;
    font-size: 25px;
    color: #cad3f5;
    text-align: left;
    transform: translate(40%, -113%);
    max-width: 800px;
    margin: 0 auto;
    padding: 20px;
    overflow-wrap: break-word;
    word-wrap: break-word;
    hyphens: auto;
}

ul {
    position: absolute;
    top: 0;
    right: 0;
    list-style-type: none;
    margin-top: 2px;
    margin-right: 7px;
    padding: 1px;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    z-index: 2;
    background-color: #232634;
    border-radius: 20px;
    overflow: hidden;
    z-index: 5;
}
  
li {
    float: left;
    z-index: 5;
}
  
li a {
    display: block;
    color: white;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
    z-index: 5;
}

li a:hover {
    background-color: rgba(255, 255, 255, 0.1);
    border-radius: 20px;
    z-index: 5;
}

@media screen and (min-width: 1790px) {
    .headerContent h1 {
        font-size: 100px;
        top: 50%;
        left: 50%; 
        transform: translate(-50%, -100%); 
        transition: transform 0% -10%;
    }

    .dotfilesImage img {
        max-width: 750px;
        max-height: 750px;
        transform: translate(0%, -10%);
        margin-left: 32px;
        border-radius: 20px;
        border: solid 5px #c6a0f6;
    }
}

@media screen and (max-width: 1790px) {
    .headerContent h1 {
        font-size: 60px;
        top: 50%; 
        left: 50%; 
        transform: translate(-50%, -500%); 
        transition: transform 0% -10%;
    }
}

@media screen and (max-width: 1020px) {
    .headerContent h1 {
        font-size: 50px;
        top: 50%; 
        left: 50%; 
        transform: translate(-50%, -800%); 
        transition: transform 0% -10%;
    }

    .dotfilesImage {
        position: absolute;
        top: 50%;
        left: 50%;
        transform: translate(-50%, -15%);
        text-align: center;
    }

    .dotfilesText h1 {
        font-family: Arial, Helvetica, sans-serif;
        font-size: 22px;
        color: #cad3f5;
        text-align: center;
        transform: translate(0%, 145%);
        max-width: 800px;
        padding: 20px;
    }
}   

@media screen and (max-width: 810px) {
    .headerContent h1 {
        font-size: 50px;
        top: 50%; 
        left: 50%; 
        transform: translate(-50%, -700%); 
        transition: transform 0% -10%;
    }

    .dotfilesImage {
        position: absolute;
        top: 50%;
        left: 15%;
        max-width: 250px;
        max-height: 250px;
        margin-left: none;
        transform: translate(-50%, -50%);
        text-align: center;
    }

    .dotfilesText h1 {
        font-family: Arial, Helvetica, sans-serif;
        font-size: 20px;
        color: #cad3f5;
        text-align: center;
        transform: translate(0%, 160%);
        max-width: 800px;
        padding: 20px;
    }
}

@media screen and (max-width: 640px) {
    .headerContent h1 {
        font-size: 40px;
        top: 50%; 
        left: 50%; 
        transform: translate(-50%, -900%); 
        transition: transform 0% -10%;
    }

    .dotfilesImage img{
        position: absolute;
        top: 50%;
        left: 5%;
        max-width: 450px;
        max-height: 450px;
        margin-left: none;
        text-align: center;
        border-width: 2px;
        transform: translate(-7%, -100%);
    }

    .dotfilesText h1 {
        font-family: Arial, Helvetica, sans-serif;
        font-size: 15px;
        color: #cad3f5;
        text-align: center;
        transform: translate(0%, 125%);
        max-width: 800px;
        padding: 20px;
    }
}

@media screen and (max-width: 412px) {
    .headerContent h1 {
        font-size: 30px;
        top: 50%; 
        left: 50%; 
        transform: translate(-50%, -1300%); 
        transition: transform 0% -10%;
    }

    .dotfilesImage img{
        position: absolute;
        top: 50%;
        left: 5%;
        max-width: 350px;
        max-height: 350px;
        margin-left: none;
        text-align: center;
        border-width: 2px;
        transform: translate(-17%, -170%);
    }

    .dotfilesText h1 {
        font-family: Arial, Helvetica, sans-serif;
        font-size: 10px;
        color: #cad3f5;
        text-align: center;
        transform: translate(0%, 115%);
        max-width: 800px;
        padding: 20px;
    }

    ul {
        position: absolute;
        top: 0;
        right: 0;
        list-style-type: none;
        margin-top: 2px;
        margin-right: 7px;
        padding: 1px;
        font-size: 10px;
        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
        z-index: 2;
        background-color: #232634;
        border-radius: 10px;
        overflow: hidden;
        z-index: 5;
    }
      
    li {
        float: left;
        z-index: 5;
    }
      
    li a {
        display: block;
        color: white;
        text-align: center;
        padding: 7px 8px;
        text-decoration: none;
        z-index: 5;
    }
    
    li a:hover {
        background-color: rgba(255, 255, 255, 0.1);
        border-radius: 20px;
        z-index: 5;
    }
}

